--- a/RTStart/RTStart.vcxproj.filters
+++ b/RTStart/RTStart.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="olcPixelGameEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
