--- a/RTStart/RTStart.vcxproj
+++ b/RTStart/RTStart.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="GameObjectsCore.h" />
+    <ClInclude Include="Modules.h" />
     <ClInclude Include="olcPixelGameEngine.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
