basic mesh design, more module stuff

--- a/RTStart/RTStart.vcxproj.filters
+++ b/RTStart/RTStart.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Modules.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MeshCore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
