--- a/RTStart/RTStart.vcxproj
+++ b/RTStart/RTStart.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="GameObjectsCore.h" />
+    <ClInclude Include="MeshCore.h" />
     <ClInclude Include="Modules.h" />
     <ClInclude Include="olcPixelGameEngine.h" />
     <ClInclude Include="Utility.h" />
