fleshed out triggers and effects, started on very basic ones

--- a/RTStart/RTStart.vcxproj.filters
+++ b/RTStart/RTStart.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="MeshCore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Triggers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
