--- a/RTStart/RTStart.vcxproj
+++ b/RTStart/RTStart.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="MeshCore.h" />
     <ClInclude Include="Modules.h" />
     <ClInclude Include="olcPixelGameEngine.h" />
+    <ClInclude Include="Triggers.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
